--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -95,9 +95,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="279" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TYc-FE-sM2">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="279" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TYc-FE-sM2">
                                 <rect key="frame" x="0.0" y="116" width="375" height="502"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellGrouped" rowHeight="279" id="cCl-IH-dHg" customClass="GroupEventsTableViewCell">
@@ -108,7 +107,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tXU-BC-fDH">
-                                                    <rect key="frame" x="15" y="11" width="345" height="257"/>
+                                                    <rect key="frame" x="14" y="10.5" width="347" height="257.5"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TUS-RP-BPT">
                                                         <size key="itemSize" width="345" height="210"/>
@@ -118,7 +117,7 @@
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="categoryCell" id="QWh-r0-mlT" customClass="CategoriesCollectionViewCell">
-                                                            <rect key="frame" x="0.0" y="23.5" width="345" height="210"/>
+                                                            <rect key="frame" x="0.0" y="24" width="345" height="210"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="345" height="210"/>
@@ -131,10 +130,10 @@
                                                                 </subviews>
                                                             </view>
                                                             <constraints>
-                                                                <constraint firstItem="o4q-Vc-ZZX" firstAttribute="top" secondItem="QWh-r0-mlT" secondAttribute="top" id="Or2-cC-kFA"/>
-                                                                <constraint firstAttribute="trailing" secondItem="o4q-Vc-ZZX" secondAttribute="trailing" id="S7p-kp-5V6"/>
-                                                                <constraint firstItem="o4q-Vc-ZZX" firstAttribute="leading" secondItem="QWh-r0-mlT" secondAttribute="leading" id="ZMI-MV-2vk"/>
-                                                                <constraint firstAttribute="bottom" secondItem="o4q-Vc-ZZX" secondAttribute="bottom" id="w0F-PA-pVj"/>
+                                                                <constraint firstItem="o4q-Vc-ZZX" firstAttribute="top" secondItem="QWh-r0-mlT" secondAttribute="top" id="5kp-nC-QO6"/>
+                                                                <constraint firstItem="o4q-Vc-ZZX" firstAttribute="leading" secondItem="QWh-r0-mlT" secondAttribute="leading" id="9bw-I9-Dgl"/>
+                                                                <constraint firstAttribute="bottom" secondItem="o4q-Vc-ZZX" secondAttribute="bottom" id="aJ9-Av-sRw"/>
+                                                                <constraint firstAttribute="trailing" secondItem="o4q-Vc-ZZX" secondAttribute="trailing" id="fwq-Yt-4ce"/>
                                                             </constraints>
                                                             <connections>
                                                                 <outlet property="tableViewEvents" destination="o4q-Vc-ZZX" id="dkh-fA-lCH"/>
@@ -143,25 +142,33 @@
                                                     </cells>
                                                 </collectionView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tXU-BC-fDH" firstAttribute="bottom" secondItem="oP3-Jg-wVC" secondAttribute="bottomMargin" id="NCr-ZT-teM"/>
+                                                <constraint firstItem="tXU-BC-fDH" firstAttribute="centerX" secondItem="oP3-Jg-wVC" secondAttribute="centerX" id="YGQ-Vw-2ch"/>
+                                                <constraint firstItem="tXU-BC-fDH" firstAttribute="leading" secondItem="oP3-Jg-wVC" secondAttribute="leadingMargin" constant="-1" id="s6n-K2-SLh"/>
+                                                <constraint firstItem="tXU-BC-fDH" firstAttribute="centerY" secondItem="oP3-Jg-wVC" secondAttribute="centerY" id="ubo-eZ-wbW"/>
+                                            </constraints>
                                         </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="tXU-BC-fDH" secondAttribute="bottom" constant="11" id="6KI-iw-pHi"/>
-                                            <constraint firstItem="tXU-BC-fDH" firstAttribute="leading" secondItem="cCl-IH-dHg" secondAttribute="leading" constant="15" id="Bhd-Ug-wly"/>
-                                            <constraint firstItem="tXU-BC-fDH" firstAttribute="top" secondItem="cCl-IH-dHg" secondAttribute="top" constant="11" id="p8B-xf-BEh"/>
-                                            <constraint firstAttribute="trailing" secondItem="tXU-BC-fDH" secondAttribute="trailing" constant="15" id="qaR-nG-0oy"/>
-                                        </constraints>
                                         <connections>
                                             <outlet property="collectionViewGroupsEvents" destination="tXU-BC-fDH" id="TCi-g7-ZoM"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Q1Z-C1-Jyz">
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Q1Z-C1-Jyz">
                                 <rect key="frame" x="177" y="122" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TYc-FE-sM2" firstAttribute="centerX" secondItem="Q1Z-C1-Jyz" secondAttribute="centerX" id="5Tz-Ib-bVL"/>
+                            <constraint firstItem="Q1Z-C1-Jyz" firstAttribute="top" secondItem="Dz6-yb-0uT" secondAttribute="top" constant="6" id="AQ8-qN-KDx"/>
+                            <constraint firstItem="TYc-FE-sM2" firstAttribute="bottom" secondItem="Dz6-yb-0uT" secondAttribute="bottom" id="Dx8-wT-5SW"/>
+                            <constraint firstAttribute="trailing" secondItem="TYc-FE-sM2" secondAttribute="trailing" id="HAV-fI-bh8"/>
+                            <constraint firstItem="TYc-FE-sM2" firstAttribute="leading" secondItem="UiJ-sR-2WF" secondAttribute="leading" id="Nhb-np-Jt7"/>
+                            <constraint firstItem="TYc-FE-sM2" firstAttribute="top" secondItem="Dz6-yb-0uT" secondAttribute="top" id="hSM-vE-lPE"/>
+                            <constraint firstItem="Q1Z-C1-Jyz" firstAttribute="leading" secondItem="Dz6-yb-0uT" secondAttribute="leading" constant="177" id="kn8-Ba-UUB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Dz6-yb-0uT"/>
                     </view>
                     <navigationItem key="navigationItem" id="48O-Vc-oIf">
