--- a/ProjectX/Cells/topCollectionViewCell.xib
+++ b/ProjectX/Cells/topCollectionViewCell.xib
@@ -19,13 +19,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="594" height="352"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zyf-tf-6T9">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zyf-tf-6T9">
                         <rect key="frame" x="7" y="67" width="580" height="275"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0l-OO-JIO">
                         <rect key="frame" x="7" y="0.0" width="580" height="31"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="31" id="wee-lp-UfV"/>
+                            <constraint firstAttribute="height" constant="31" id="Kd5-11-0Bg"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                         <nil key="textColor"/>
@@ -34,7 +34,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZrY-27-Zsn">
                         <rect key="frame" x="7" y="39" width="580" height="26"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="26" id="We3-oo-pp5"/>
+                            <constraint firstAttribute="height" constant="26" id="aFU-mi-5Ec"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
                         <nil key="textColor"/>
@@ -43,16 +43,16 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="G0l-OO-JIO" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="4nm-L0-tri"/>
-                <constraint firstItem="G0l-OO-JIO" firstAttribute="trailing" secondItem="ZrY-27-Zsn" secondAttribute="trailing" id="8mx-Qn-6P4"/>
-                <constraint firstItem="ZrY-27-Zsn" firstAttribute="top" secondItem="G0l-OO-JIO" secondAttribute="bottom" constant="8" symbolic="YES" id="VsJ-oY-M01"/>
-                <constraint firstItem="G0l-OO-JIO" firstAttribute="leading" secondItem="ZrY-27-Zsn" secondAttribute="leading" id="aJf-4D-uB9"/>
-                <constraint firstItem="ZrY-27-Zsn" firstAttribute="leading" secondItem="Zyf-tf-6T9" secondAttribute="leading" id="dZq-FE-EdV"/>
-                <constraint firstAttribute="bottom" secondItem="Zyf-tf-6T9" secondAttribute="bottom" constant="10" id="go6-a8-QbG"/>
-                <constraint firstItem="ZrY-27-Zsn" firstAttribute="trailing" secondItem="Zyf-tf-6T9" secondAttribute="trailing" id="oA3-4p-76d"/>
-                <constraint firstItem="G0l-OO-JIO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="7" id="rSY-16-7qm"/>
-                <constraint firstItem="Zyf-tf-6T9" firstAttribute="top" secondItem="ZrY-27-Zsn" secondAttribute="bottom" constant="2" id="vbP-LG-hY9"/>
-                <constraint firstItem="G0l-OO-JIO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ySu-Hr-esK"/>
+                <constraint firstAttribute="bottom" secondItem="Zyf-tf-6T9" secondAttribute="bottom" constant="10" id="0xj-aj-4No"/>
+                <constraint firstItem="G0l-OO-JIO" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="7" id="9rd-ph-c9N"/>
+                <constraint firstItem="G0l-OO-JIO" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Bcu-WN-vrf"/>
+                <constraint firstItem="ZrY-27-Zsn" firstAttribute="leading" secondItem="Zyf-tf-6T9" secondAttribute="leading" id="Doj-ug-5PB"/>
+                <constraint firstItem="Zyf-tf-6T9" firstAttribute="top" secondItem="ZrY-27-Zsn" secondAttribute="bottom" constant="2" id="ROt-zJ-vSI"/>
+                <constraint firstItem="G0l-OO-JIO" firstAttribute="leading" secondItem="ZrY-27-Zsn" secondAttribute="leading" id="cBa-1O-Ttw"/>
+                <constraint firstItem="ZrY-27-Zsn" firstAttribute="top" secondItem="G0l-OO-JIO" secondAttribute="bottom" constant="8" symbolic="YES" id="cXy-2T-kNC"/>
+                <constraint firstItem="G0l-OO-JIO" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="drM-aW-rwt"/>
+                <constraint firstItem="ZrY-27-Zsn" firstAttribute="trailing" secondItem="Zyf-tf-6T9" secondAttribute="trailing" id="oEw-aX-soj"/>
+                <constraint firstItem="G0l-OO-JIO" firstAttribute="trailing" secondItem="ZrY-27-Zsn" secondAttribute="trailing" id="wyL-6m-UcH"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
             <size key="customSize" width="594" height="352"/>
