--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -626,6 +626,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Send"/>
+                                <connections>
+                                    <action selector="didTapSend:" destination="kQF-6t-QBu" eventType="touchUpInside" id="LqO-lU-scS"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gRf-25-0Kp">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
@@ -669,7 +672,6 @@
                     <connections>
                         <outlet property="messageText" destination="RFh-0O-0c5" id="hUt-Cw-SFK"/>
                         <outlet property="messagesTableView" destination="gRf-25-0Kp" id="j3t-6J-jLJ"/>
-                        <outlet property="sendButton" destination="y9E-af-9As" id="lYK-fi-WSP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="exe-QF-HZL" userLabel="First Responder" sceneMemberID="firstResponder"/>
